--- a/public/Nitrocid/Resources/Languages/mal.json
+++ b/public/Nitrocid/Resources/Languages/mal.json
@@ -738,7 +738,7 @@
       "text": "Gagal menamakan semula pengguna. {0}"
     },
     {
-      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND",
+      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND2",
       "text": "Pengguna tidak ditemui"
     },
     {
@@ -1254,7 +1254,7 @@
       "text": "Senarai aksara biasa:"
     },
     {
-      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_NORMALLIST",
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_ARRAYLIST",
       "text": "Senarai aksara tatasusunan:"
     },
     {
@@ -2814,7 +2814,7 @@
       "text": "vendor pemproses:"
     },
     {
-      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED",
+      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED2",
       "text": "Kelajuan jam:"
     },
     {
@@ -2906,7 +2906,7 @@
       "text": "Ralat tidak diketahui semasa menyenaraikan dalam direktori: {0}"
     },
     {
-      "loc": "NKS_FILES_UNAUTHORIZED",
+      "loc": "NKS_FILES_UNAUTHORIZED2",
       "text": "tanpa kebenaran"
     },
     {
@@ -5058,7 +5058,7 @@
       "text": "Menyenaraikan semua sifat yang tersedia daripada addon yang ditentukan"
     },
     {
-      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSADDONTYPES_DESC",
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSBASEADDONS_DESC",
       "text": "Menyenaraikan semua tambahan asas dan statusnya"
     },
     {
@@ -6002,7 +6002,7 @@
       "text": "Tidak boleh mendaftar syarat kosong."
     },
     {
-      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND",
+      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND_UNREGISTER",
       "text": "Tidak boleh menyahdaftar syarat yang tidak wujud."
     },
     {
@@ -7010,7 +7010,7 @@
       "text": "Nama hos kernel untuk berkomunikasi dengan seluruh komputer"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_CLEARSCREEN_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_SHOWUSERNAMES_NAME",
       "text": "Tunjukkan nama pengguna yang tersedia"
     },
     {
@@ -7018,7 +7018,7 @@
       "text": "Laluan MOTD"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MOTDPATH_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MALPATH_NAME",
       "text": "Laluan MAL"
     },
     {
