--- a/public/Nitrocid/Resources/Languages/arb.json
+++ b/public/Nitrocid/Resources/Languages/arb.json
@@ -761,7 +761,7 @@
       "text": "fashilat 'iieadat tasmiat almustakhdimi. {0}"
     },
     {
-      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND",
+      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND2",
       "text": "almustakhdim lays mawjud"
     },
     {
@@ -1277,7 +1277,7 @@
       "text": "qayimat al'ahruf aleadiati:"
     },
     {
-      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_NORMALLIST",
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_ARRAYLIST",
       "text": "qayimat 'ahruf almasfufati:"
     },
     {
@@ -2837,7 +2837,7 @@
       "text": "bāʾiʿ al-mʿālǧ:"
     },
     {
-      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED",
+      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED2",
       "text": "srʿẗ al-sāʿẗ:"
     },
     {
@@ -2929,7 +2929,7 @@
       "text": "ẖṭʾa ġīr mʿrūf aṯnāʾ al-idrāǧ fī al-dlīl: {0}"
     },
     {
-      "loc": "NKS_FILES_UNAUTHORIZED",
+      "loc": "NKS_FILES_UNAUTHORIZED2",
       "text": "ġīr mṣrḥ"
     },
     {
@@ -5081,7 +5081,7 @@
       "text": "īsrd ǧmīʿ al-ẖṣāʾiṣ al-mtāḥẗ mn al-mlḥq al-mḥdd"
     },
     {
-      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSADDONTYPES_DESC",
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSBASEADDONS_DESC",
       "text": "īsrd ǧmīʿ al-iḍāfāt al-ʾasāsīẗ ūḥālthā"
     },
     {
@@ -6025,7 +6025,7 @@
       "text": "lā īmkn tsǧīl ḥālẗ fārġẗ."
     },
     {
-      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND",
+      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND_UNREGISTER",
       "text": "lā īmkn ilġāʾ tsǧīl šrṭ ġīr mūǧūd."
     },
     {
@@ -7033,7 +7033,7 @@
       "text": "asm mḍīf al-nwāẗ lltwāṣl mʿ bqīẗ aǧhzẗ al-kmbīūtr"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_CLEARSCREEN_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_SHOWUSERNAMES_NAME",
       "text": "iẓhār asmāʾ al-mstẖdmīn al-mtāḥẗ"
     },
     {
@@ -7041,7 +7041,7 @@
       "text": "msār MOTD"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MOTDPATH_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MALPATH_NAME",
       "text": "msār māl"
     },
     {
