--- a/public/Nitrocid/Resources/Languages/chi.json
+++ b/public/Nitrocid/Resources/Languages/chi.json
@@ -743,7 +743,7 @@
       "text": "Zhòng mìngmíng yònghù shībài. {0}"
     },
     {
-      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND",
+      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND2",
       "text": "Zhǎo bù dào shǐyòng zhě"
     },
     {
@@ -1259,7 +1259,7 @@
       "text": "Pǔtōng zìfú lièbiǎo:"
     },
     {
-      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_NORMALLIST",
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_ARRAYLIST",
       "text": "Shùzǔ zìfú lièbiǎo:"
     },
     {
@@ -2819,7 +2819,7 @@
       "text": "chǔ lǐ qì gōng yīng shāng ："
     },
     {
-      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED",
+      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED2",
       "text": "shí zhōng sù dù ："
     },
     {
@@ -2911,7 +2911,7 @@
       "text": "zài mù lù zhōng liè chū shí chū xiàn wèi zhī cuò wù ：{0}"
     },
     {
-      "loc": "NKS_FILES_UNAUTHORIZED",
+      "loc": "NKS_FILES_UNAUTHORIZED2",
       "text": "wèi jīng shòu quán"
     },
     {
@@ -5063,7 +5063,7 @@
       "text": "liè chū zhǐ dìng chā jiàn de suǒ yǒu kě yòng shǔ xìng"
     },
     {
-      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSADDONTYPES_DESC",
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSBASEADDONS_DESC",
       "text": "liè chū suǒ yǒu jī běn chā jiàn jí qí zhuàng tài"
     },
     {
@@ -6007,7 +6007,7 @@
       "text": "wú fǎ zhù cè kōng tiáo jiàn 。"
     },
     {
-      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND",
+      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND_UNREGISTER",
       "text": "wú fǎ qǔ xiāo zhù cè bù cún zài de tiáo jiàn 。"
     },
     {
@@ -7015,7 +7015,7 @@
       "text": "yǔ qí yú jì suàn jī tōng xìn de nèi hé zhǔ jī míng"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_CLEARSCREEN_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_SHOWUSERNAMES_NAME",
       "text": "xiǎn shì kě yòng de yòng hù míng"
     },
     {
@@ -7023,7 +7023,7 @@
       "text": "MOTD lù jìng"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MOTDPATH_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MALPATH_NAME",
       "text": "mǎ ěr lù jìng"
     },
     {
