--- a/public/Nitrocid/Resources/Languages/eng.json
+++ b/public/Nitrocid/Resources/Languages/eng.json
@@ -841,7 +841,7 @@
       "text": "Failed to rename user. {0}"
     },
     {
-      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND",
+      "loc": "NKS_USERS_EXCEPTION_USERNOTFOUND2",
       "text": "User not found"
     },
     {
@@ -1357,7 +1357,7 @@
       "text": "Normal char list:"
     },
     {
-      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_NORMALLIST",
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTLISTWRITERCHAR_ARRAYLIST",
       "text": "Array char list:"
     },
     {
@@ -2917,7 +2917,7 @@
       "text": "Processor vendor:"
     },
     {
-      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED",
+      "loc": "NKS_DRIVERS_HARDWARE_BASE_CLOCKSPEED2",
       "text": "Clock speed:"
     },
     {
@@ -3009,7 +3009,7 @@
       "text": "Unknown error while listing in directory: {0}"
     },
     {
-      "loc": "NKS_FILES_UNAUTHORIZED",
+      "loc": "NKS_FILES_UNAUTHORIZED2",
       "text": "Unauthorized"
     },
     {
@@ -5161,7 +5161,7 @@
       "text": "Lists all available properties from the specified addon"
     },
     {
-      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSADDONTYPES_DESC",
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_LSBASEADDONS_DESC",
       "text": "Lists all the base addons and their status"
     },
     {
@@ -6105,7 +6105,7 @@
       "text": "Can't register an empty condition."
     },
     {
-      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND",
+      "loc": "NKS_SHELL_BASE_SCRIPTING_EXCEPTION_CONDITIONNOTFOUND_UNREGISTER",
       "text": "Can't unregister a condition that doesn't exist."
     },
     {
@@ -7113,7 +7113,7 @@
       "text": "The kernel host name to communicate with the rest of the computers"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_CLEARSCREEN_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_SHOWUSERNAMES_NAME",
       "text": "Show available usernames"
     },
     {
@@ -7121,7 +7121,7 @@
       "text": "MOTD Path"
     },
     {
-      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MOTDPATH_NAME",
+      "loc": "NKS_SETTINGS_KERNEL_LOGIN_MALPATH_NAME",
       "text": "MAL Path"
     },
     {
